Fixed overflow

--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -5,6 +5,7 @@ header {
   position: sticky;
   top: 0;
   background-color: white;
+  z-index: 10;
 }
 
 @media (max-width: 767px) {
